# easy_grpc

./: .codecov.yml  .coveralls.yml  .dockerignore  .gitignore  CMakeLists.txt  CTestConfig.cmake  Dockerfile  README.md  buildenv.Dockerfile  mkdocs.yml
.circleci/: config.yml
cmake/: easy_grpc-config.cmake.in
docs/: api.md  client.md  future.md  index.md  server.md
examples/00_hello_rpc/: CMakeLists.txt  client_main.cpp  hello.proto  server_main.cpp  server_ref_main.cpp
examples/01_non_protobuf/: CMakeLists.txt  client_main.cpp  packet.h  server_main.cpp
examples/02_streaming_reply/: CMakeLists.txt  client_main.cpp  hello.proto  server_main.cpp
examples/03_streaming_request/: CMakeLists.txt  client_main.cpp  hello.proto  server_main.cpp
examples/simple_async_client/: CMakeLists.txt  data.proto  main.cpp  main_server_grpc.cpp
include/easy_grpc/: completion_queue.h  config.h  easy_grpc.h  environment.h  error.h  function_traits.h  gen_support.h  serialize.h  variadic_future.h
include/easy_grpc/client/: channel.h  method_stub.h  stub_impl.h  unsecure_channel.h
include/easy_grpc/ext_protobuf/: gen_support.h  serialize.h
include/easy_grpc/server/: credentials.h  server.h  service.h  service_config.h  service_impl.h
include/easy_grpc/server/methods/: bidir_streaming.h  call_handler.h  client_streaming.h  listener.h  method.h  ops.h  server_reader.h  server_streaming.h  server_writer.h  unary.h  unary_handler.h
include/easy_grpc_reflection/: reflection.h
include/var_future/: config.h  future.h
include/var_future/impl/: future.h  tie.h
protoc_plugin/: CMakeLists.txt  main.cpp
src/easy_grpc/: completion_queue.cpp  environment.cpp  server.cpp
src/easy_grpc/client/: channel.cpp  unsecure_channel.cpp
src/easy_grpc/server/: config.cpp  server.cpp  service.cpp
src/easy_grpc_reflection/: CMakeLists.txt  reflection_impl.cpp
tests/: CMakeLists.txt  bidir_streaming.cpp  binary_protocol.cpp  client_streaming.cpp  end_to_end.cpp  environment.cpp  future.cpp  server.cpp  server_streaming.cpp  test.proto  test_channel.cpp  test_error.cpp
